Moved INotifyPropertyChanged code out of AModelItem into a new ANotifyingObject. Rebased AModelItem onto ANotifyingObject Added AWorker to proved a worker that updates through INotifyProperyChanged

--- a/MVC.csproj
+++ b/MVC.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="AIdentifier.cs" />
     <Compile Include="AModelItem.cs" />
+    <Compile Include="ANotifyingObject.cs" />
+    <Compile Include="AWorker.cs" />
     <Compile Include="CheckedTreeViewItem.cs" />
     <Compile Include="CheckedTreeViewModel.cs" />
     <Compile Include="Model.cs" />
