--- a/MVC.csproj
+++ b/MVC.csproj
@@ -43,12 +43,15 @@
   <ItemGroup>
     <Compile Include="AIdentifier.cs" />
     <Compile Include="AModelItem.cs" />
+    <Compile Include="ANotifyingCollection.cs" />
     <Compile Include="ANotifyingObject.cs" />
     <Compile Include="AWorker.cs" />
     <Compile Include="CheckedTreeViewItem.cs" />
     <Compile Include="CheckedTreeViewModel.cs" />
+    <Compile Include="FilteredModel.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadOnlyModel.cs" />
     <Compile Include="StaticModel.cs" />
     <Compile Include="StringID.cs" />
   </ItemGroup>
