Added Communication library, since it really is part of my MVC implementation

--- a/MVC.csproj
+++ b/MVC.csproj
@@ -51,6 +51,22 @@
     <Compile Include="AWorker.cs" />
     <Compile Include="CheckedTreeViewItem.cs" />
     <Compile Include="CheckedTreeViewModel.cs" />
+    <Compile Include="Communication\CommunicatableException.cs" />
+    <Compile Include="Communication\CommunicationHandler.cs" />
+    <Compile Include="Communication\ICommunicationReceiver.cs" />
+    <Compile Include="Communication\Interface\InterfaceHandler.cs" />
+    <Compile Include="Communication\Message\MessageEventArgs.cs" />
+    <Compile Include="Communication\Message\MessageHandler.cs" />
+    <Compile Include="Communication\Message\MessageTypes.cs" />
+    <Compile Include="Communication\Progress\ProgressChangedEventArgs.cs" />
+    <Compile Include="Communication\Progress\ProgressHandler.cs" />
+    <Compile Include="Communication\Progress\ProgressState.cs" />
+    <Compile Include="Communication\Request\RequestEventArgs.cs" />
+    <Compile Include="Communication\Request\RequestHandler.cs" />
+    <Compile Include="Communication\Request\RequestReply.cs" />
+    <Compile Include="Communication\Request\RequestType.cs" />
+    <Compile Include="Communication\RespondableEventArg.cs" />
+    <Compile Include="Communication\ResponseType.cs" />
     <Compile Include="FilteredModel.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
