--- a/MVC.csproj
+++ b/MVC.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Communication\RespondableEventArg.cs" />
     <Compile Include="Communication\ResponseType.cs" />
     <Compile Include="FilteredModel.cs" />
+    <Compile Include="ICancellable.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyModel.cs" />
