Added new SimpleModel so that I can use the methods I've added to observable collection in more generic models

--- a/MVC.csproj
+++ b/MVC.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyModel.cs" />
+    <Compile Include="SimpleModel.cs" />
     <Compile Include="StaticModel.cs" />
     <Compile Include="StringID.cs" />
   </ItemGroup>
