--- a/MVC.csproj
+++ b/MVC.csproj
@@ -40,6 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +70,8 @@
     <Compile Include="Communication\ResponseType.cs" />
     <Compile Include="FilteredModel.cs" />
     <Compile Include="ICancellable.cs" />
+    <Compile Include="IModelItem.cs" />
+    <Compile Include="INotifyingCollection.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyModel.cs" />
