--- a/MVC.csproj
+++ b/MVC.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>MVC</RootNamespace>
     <AssemblyName>MVC</AssemblyName>
     <FileAlignment>512</FileAlignment>
+    <ReleaseVersion>1.1.0</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
